fixed some layout issues and commented the usage of the scraper

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -94,6 +94,7 @@ h2 {
     font-family: 'OttoSans', sans-serif;
     color: #000;
     margin: 3px;
+    margin-top: 8px;
     font-size: 1em;
     align-self: left;
     margin-left: auto;
